# local-voice

./: .gitignore  README.md  download_models.py  localvoice.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: __init__.py  macos_permissions.py  main.py
src/audio/: recorder.py  sounds.py
src/gui/: __init__.py  main_window.py  settings_dialog.py  themes.py  tray_icon.py
src/history/: __init__.py  dialog.py  manager.py
src/hotkey/: __init__.py  manager.py
src/injection/: __init__.py  text_injector.py
src/profiles/: __init__.py  manager.py
src/transcription/: __init__.py  engine.py
src/vocabulary/: __init__.py  manager.py
