[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localvoice"
version = "1.0.0"
description = "Offline voice-to-text desktop utility with global hotkey support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LocalVoice Team"}
]
keywords = ["voice", "speech-to-text", "whisper", "offline", "dictation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyQt6>=6.5.0",
    "faster-whisper>=0.10.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
]

[project.scripts]
localvoice = "src.main:main"

[project.gui-scripts]
localvoice-gui = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
